# OpenTSLM

./: .gitignore  check_attention_support.py  curriculum_learning.py  inference.py  mlflow_tracker.py  pyproject.toml  requirements.txt
src/: model_config.py
src/model/encoder/: CNNTokenizer.py  TimeSeriesEncoderBase.py  TransformerCNNEncoder.py
src/model/llm/: OpenTSLMFlamingo.py  OpenTSLMSP.py  TimeSeriesLLM.py
src/prompt/: full_prompt.py  prompt_with_answer.py
src/time_series_datasets/: QADataset.py  TSQADataset.py  tsqa.py  util.py
src/time_series_datasets/ecg_qa/: ECGQACoTQADataset.py  ECGQADataset.py  __init__.py  ecgqa_cot_loader.py  ecgqa_loader.py  plot_example.py
src/time_series_datasets/har_cot/: HARAccQADataset.py  HARCoTQADataset.py  har_cot_loader.py
src/time_series_datasets/m4/: M4QADataset.py
src/time_series_datasets/monash/: MonashDataset.py  MonashSPO2QADataset.py
src/time_series_datasets/pamap2/: PAMAP2AccQADataset.py  PAMAP2CoTQADataset.py  PAMAP2Dataset.py  pamap2_cot_loader.py  pamap2_loader.py
src/time_series_datasets/simulation/: SimulationQADataset.py
src/time_series_datasets/sleep/: SleepEDFCoTQADataset.py  SleepEDFQADataset.py  sleepedf_cot_loader.py
